[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[dependencies]
flexi_logger = { version = "0.23.0", features = ["use_chrono_for_offset"] }
gecko-mqtt = { path = "../gecko-mqtt" }
tokio = { version = "1.20.1", features = ["full"] }

[[bin]]
name = "standalone"
path = "standalone/main.rs"
