[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
flexi_logger = { version = "0.23.0", features = ["use_chrono_for_offset"] }
gecko-mqtt = { path = "../gecko-mqtt" }
log = "0.4.17"
tokio = { version = "1.20.1", features = ["full"] }

[[bin]]
name = "standalone"
path = "standalone/main.rs"
