[package]
name = "gecko-mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
bytes = "1.2.1"
log = "0.4.17"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
gecko-mqtt-proto = { path = "../gecko-mqtt-proto" }
tonic = "0.8.0"
toml = "0.5.9"
serde = { version = "1.0.144", features = ["derive"] }
futures = "0.3.24"
clap = { version = "3.2.21", features = ["derive"] }
